--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -243,7 +243,7 @@ library(tidyverse)
 library(engsoccerdata)
 library(bayesplot)
 library(loo)
-library(dplyr)
+#library(dplyr)
 library(ggplot2)
 ```
 
