--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -242,11 +242,9 @@ and load the following required packages (please, install them on your laptops):
 
 ```{r libraries, echo = TRUE, eval = TRUE}
 library(footBayes)
-library(tidyverse)
 library(engsoccerdata)
 library(bayesplot)
 library(loo)
-library(dplyr)
 library(ggplot2)
 ```
 
@@ -267,9 +265,15 @@ At this stage, we are currently ignoring any time-dependence in our parameters, 
 ### Use Italian Serie A 2000/2001
 
 italy <- as_tibble(italy)
-italy_2000<- italy %>%
- dplyr::select(Season, home, visitor, hgoal,vgoal) %>%
- dplyr::filter(Season=="2000")
+italy_2000 <- subset(italy[, c(2,3,4,6,7)], 
+                     Season =="2000")
+
+  
+## alternatively, you can use the following code:  
+#library(tidyverse)
+#italy_2000<- italy %>%
+# dplyr::select(Season, home, visitor, hgoal,vgoal) #%>%
+# dplyr::filter(Season=="2000")
 
 ### Fit Stan models
 ## no dynamics, no predictions
