--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -10,7 +10,7 @@
     author = {{Stan Development Team}},
     note = {R package version 2.21.2},
     year = {2020},
-    url = {http://mc-stan.org/},
+    url = {https://mc-stan.org/},
   }
 
 @Misc{rstan,
@@ -18,7 +18,7 @@
     author = {{Stan Development Team}},
     note = {R package version 2.18.2},
     year = {2018},
-    url = {http://mc-stan.org/},
+    url = {https://mc-stan.org/},
   }
 
 @article{schmidli2014robust,
@@ -298,7 +298,7 @@
    author={Gelman, Andrew},
    year={2016},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={http://andrewgelman.com/2016/03/25/28321/}
+   url={https://andrewgelman.com/2016/03/25/28321/}
 }
 
 @article{kohl2007distrex,
@@ -330,7 +330,7 @@
    author={Gelman, Andrew},
    year={2016},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={http://andrewgelman.com/page/2/}
+   url={https://andrewgelman.com/page/2/}
 }
 
 @article{petrone2014empirical,
@@ -557,7 +557,7 @@
   title={The {S}tan {C++} Library, Version 2.9.0},
   author={{Stan Development Team}},
   year={2016},
-  url={http://mc-stan.org}
+  url={https://mc-stan.org}
 }
 
 
@@ -849,7 +849,7 @@
   title = {Stan Modeling Language User's Guide and Reference Manual, Version 2.14.0},
   author = {{Stan Development Team}},
   year = 2016,
-  note = {\url{http://mc-stan.org/}}
+  note = {\url{https://mc-stan.org/}}
 }
 
 @article{young1996priors,
@@ -1135,7 +1135,7 @@
    author={Gelman, Andrew},
    year={2014},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={http://andrewgelman.com/2014/07/13/stan-analyzes-world-cup-data/}
+   url={https://andrewgelman.com/2014/07/13/stan-analyzes-world-cup-data/}
 }
   
 @article{egidi2018relabelling,
