--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -247,6 +247,7 @@ library(bayesplot)
 library(loo)
 library(ggplot2)
 library(dplyr)
+library(tidyverse)
 ```
 
 # Model fit
@@ -265,16 +266,18 @@ At this stage, we are currently ignoring any time-dependence in our parameters, 
 
 ### Use Italian Serie A 2000/2001
 
-italy_2000 <- subset(italy[, c(2,3,4,6,7)], 
-                     Season =="2000")
+italy <- as_tibble(italy)
+italy_2000<- italy %>%
+  dplyr::select(Season, home, visitor, hgoal,vgoal) #%>%
+  dplyr::filter(Season=="2000")
+italy_2000
 
-## alternatively, you can use the following 'tidyverse-based' code: 
+## alternatively, you can use the basic 'subsetting' code, 
+## not using the 'tidyverse' environment: 
 
-# library(tidyverse)
-# italy <- as_tibble(italy)
-# italy_2000<- italy %>%
-# dplyr::select(Season, home, visitor, hgoal,vgoal) #%>%
-# dplyr::filter(Season=="2000")
+#italy_2000 <- subset(italy[, c(2,3,4,6,7)], 
+#                     Season =="2000")
+
 
 ### Fit Stan models
 ## no dynamics, no predictions
