--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -2,7 +2,7 @@
 title: "Fitting football models and visualizing predictions with the ```footBayes``` package"
 author: "Leonardo Egidi"
 date: "`r Sys.Date()`"
-output: rmarkdown::html_vignette
+output: knitr::rmarkdown
 bibliography: thesis.bib
 vignette: >
   %\VignetteIndexEntry{Fitting football models with the ```footBayes``` package}
