--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -1119,7 +1119,7 @@
   year={1979},
   publisher={Oxford University Press}
 }
-  
+
 @article{blei2003latent,
   title={Latent dirichlet allocation},
   author={Blei, David M and Ng, Andrew Y and Jordan, Michael I},
@@ -1135,9 +1135,9 @@
    author={Gelman, Andrew},
    year={2014},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={https://andrewgelman.com/2014/07/13/stan-analyzes-world-cup-data/}
+   url={https://statmodeling.stat.columbia.edu/2014/07/13/stan-analyzes-world-cup-data/}
 }
-  
+
 @article{egidi2018relabelling,
   title={Relabelling in Bayesian mixture models by pivotal units},
   author={Egidi, Leonardo and Pappada, Roberta and Pauli, Francesco and Torelli, Nicola},
