--- a/vignettes/thesis.bib
+++ b/vignettes/thesis.bib
@@ -298,7 +298,7 @@
    author={Gelman, Andrew},
    year={2016},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={https://andrewgelman.com/2016/03/25/28321/}
+   url={https://statmodeling.stat.columbia.edu/2016/03/25/28321/}
 }
 
 @article{kohl2007distrex,
@@ -330,7 +330,7 @@
    author={Gelman, Andrew},
    year={2016},
    journal={Statistical modeling, causal inference, and social science blog},
-   url={https://andrewgelman.com/page/2/}
+   url={https://statmodeling.stat.columbia.edu/2017/04/28/prior-choice-recommendations-wiki/}
 }
 
 @article{petrone2014empirical,
