--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -17,8 +17,11 @@ knitr::opts_chunk$set(
 )
 knitr::opts_chunk$set(fig.align = 'center', 
                       warning=FALSE, message=FALSE, fig.asp=0.625, fig.height =10, fig.width = 8, 
-                      out.width='750px', dpi=200, global.par = TRUE
-                      ,dev='png',  dev.args=list(pointsize=10), fig.path = 'figs/'
+                      out.width='750px', dpi=200, 
+                      global.par = TRUE,
+                      dev='png',  
+                      dev.args=list(pointsize=10)
+                      #,fig.path = 'figs/'
                       )
 ```
 
