--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -4,11 +4,11 @@ author: "Leonardo Egidi"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 bibliography: thesis.bib
-vignette: >
-  %\VignetteIndexEntry{Fitting football models with the ```footBayes``` package}
-  %\VignetteEngine{rmarkdown::render}
-  %\VignetteEncoding{UTF-8}
 ---
+
+%\VignetteIndexEntry{Fitting football models with the ```footBayes``` package}
+  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEncoding{UTF-8}
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
@@ -25,7 +25,7 @@ knitr::opts_chunk$set(fig.align = 'center',
                       )
 ```
 
-<!--knitr::rmarkdown --> 
+<!-- --> 
 # Modeling football outcomes
 
 Modeling football outcomes became incredibly popular over the last years. However, an **encompassing computational tool** able to fit in one step many alternative football models is missing yet.
