--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -4,11 +4,13 @@ author: "Leonardo Egidi"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 bibliography: thesis.bib
----
-
-%\VignetteIndexEntry{Fitting football models and visualizing predictions with the ```footBayes``` package}
+vignette: >
+  %\VignetteIndexEntry{Fitting football models and visualizing predictions with the ```footBayes``` package}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
+
+---
+
 
 ```{r setup, include = FALSE}
 knitr::opts_chunk$set(
