--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -3,6 +3,7 @@ title: "Fitting football models and visualizing predictions with the ```footBaye
 author: "Leonardo Egidi"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
+  toc: yes
 bibliography: thesis.bib
 vignette: >
   %\VignetteIndexEntry{Fitting football models and visualizing predictions with the ```footBayes``` package}
@@ -11,7 +12,7 @@ vignette: >
 ---
 
 
-```{r setup, include = FALSE}
+```{r setup, cache = FALSE, include = FALSE}
 knitr::opts_chunk$set(
   eval = FALSE,
   collapse = TRUE,
