--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -14,10 +14,12 @@ vignette: >
 
 
 ```{r setup, cache = FALSE, include = FALSE}
+NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
 knitr::opts_chunk$set(
-  eval = FALSE,
   collapse = TRUE,
-  comment = "#>"
+  comment = "#>",
+  purl = NOT_CRAN,
+  eval = NOT_CRAN
 )
 knitr::opts_chunk$set(fig.align = 'center', 
                       warning=FALSE, message=FALSE, fig.asp=0.625, fig.height =10, fig.width = 8, 
