--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -13,7 +13,7 @@ vignette: >
 ---
 
 
-```{r setup, cache = FALSE, include = FALSE}
+```{r setup,  include = FALSE}
 NOT_CRAN <- identical(tolower(Sys.getenv("NOT_CRAN")), "true")
 knitr::opts_chunk$set(
   collapse = TRUE,
@@ -271,7 +271,7 @@ To start with some analysis, let's now import some data about the Italian Serie 
 
 At this stage, we are currently ignoring any time-dependence in our parameters, considering them to be **static** across distinct match-times.  
 
-```{r static_fit, echo =TRUE, eval = TRUE}
+```{r static_fit, echo =TRUE, eval = NOT_CRAN}
 
 ### Use Italian Serie A 2000/2001
 
@@ -327,7 +327,7 @@ where $\rho$ is assigned an half-Gaussian distribution with standard deviation e
 
 We can also depict the marginal posterior distributions for $\rho$ (and eventually for the other fixed-effects parameters) using the ```bayesplot``` package for Bayesian visualizations:
 
-```{r static_fit_corr, echo =TRUE, eval = TRUE}
+```{r static_fit_corr, echo =TRUE, eval = NOT_CRAN}
 ## Marginal posterior with bayesplot
 
 posterior1 <- as.matrix(fit1_stan)
@@ -337,7 +337,7 @@ mcmc_areas(posterior1, regex_pars=c("home", "rho",
 
 We can also access the original BP Stan code by typing:
 
-```{r stan_extract, echo =TRUE, eval = TRUE}
+```{r stan_extract, echo =TRUE, eval = NOT_CRAN}
 ### Model's code extraction
 
 fit1_stan@stanmodel
@@ -345,7 +345,7 @@ fit1_stan@stanmodel
 
 We fit now the same model under the MLE approach with Wald-type confidence intervals. We can then print the MLE estimates, e.g for the parameters $\rho$ and $\text{home}$:
 
-```{r static_fit2, echo = TRUE, eval = TRUE}
+```{r static_fit2, echo = TRUE, eval = NOT_CRAN}
 ### Fit MLE models
 ## no dynamics, no predictions
 ## Wald intervals
@@ -395,7 +395,7 @@ fit1_stan_t <- stan_foot(data = italy_2000,
 
 Then, we can compare the marginal posteriors from the two models, the one with Gaussian team-specific abilities and the default $\mathsf{Cauchy}(0,5)$ for the team-level sds, and the other one specified above, with student-$t$ distributed team-specific abilities and the $\mathsf{Laplace}^+(0,1)$ for the team-level sds. We depict here the comparison for the attack team-level sds only:
 
-```{r comparing_priors}
+```{r comparing_priors, eval = NOT_CRAN}
 ## comparing posteriors
 
 posterior1_t <- as.matrix(fit1_stan_t)
@@ -453,7 +453,7 @@ with hyperparameters $\mu_{\text{att}}, \mu_{\text{def}}, \sigma_{\text{att}}, \
  We can use the ```dynamic_type``` argument in the ```stan_foot``` function, with possible options ```'seasonal'``` or ```'weekly'``` in order to consider more seasons (no examples are given in this course) or more week-times within a single season, respectively.  Let's fit a weekly-dynamic parameters model on the Serie A 2000/2001 season:
 
 
-```{r dynamic_fit,message = FALSE, results='hide', echo =TRUE, eval = TRUE}
+```{r dynamic_fit,message = FALSE, results='hide', echo =TRUE, eval = NOT_CRAN}
 ### Fit Stan models
 ## seasonal dynamics, no predictions
 ## 4 Markov chains, 'n_iter' iterations each
@@ -471,7 +471,7 @@ From the printed summary, we may note that the degree of goals' correlation seem
 
 To deal with these issues and broaden the set of candidate models, let's fit also a dynamic double-Poisson model with the ```double_pois``` option for the argument ```model```:
 
-```{r weekly_fit, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
+```{r weekly_fit, message = FALSE, results='hide', echo = TRUE, eval = NOT_CRAN}
 ### Fit Stan models
 ## weekly dynamics, no predictions
 ## 4 chains, 'n_iter' iterations each
@@ -494,7 +494,7 @@ The fitting problems mentioned above remain also for the double Poisson model...
  \sigma_{\text{att}},  \sigma_{\text{def}} &\ \sim \mathsf{Cauchy}^+(0,25),
  \end{align}
 
-```{r weekly_fit_t, message = FALSE, results='hide', echo = TRUE, eval = TRUE}
+```{r weekly_fit_t, message = FALSE, results='hide', echo = TRUE, eval = NOT_CRAN}
 ### Fit Stan models
 ## weekly dynamics, no predictions
 ## 4 chains, 'n_iter' iterations each
@@ -529,7 +529,7 @@ Once the model has been fitted, there is a large amount of interesting summaries
 
 We can produce the team-specific abilities for the two static fits above, ```fit1_mle``` (MLE) and ```fit1_stan``` (Bayes), with red bars for the attack and blue bars for the defence, respectively:
 
-```{r abilities, echo = TRUE, eval = TRUE, fig.show="hold"}
+```{r abilities, echo = TRUE, eval = NOT_CRAN, fig.show="hold"}
 ## Plotting abilities: credible and confidence 95% intervals
 
 foot_abilities(object = fit1_stan, data = italy_2000, cex.var = 1)
@@ -540,7 +540,7 @@ AS Roma, the team winning the Serie A 2000/2001, is associated with the highest 
 
 We can also depict the team-specific dynamic plots for the dynamic models:
 
-```{r abilities_dyn, echo = TRUE, eval = TRUE, fig.show="hold"}
+```{r abilities_dyn, echo = TRUE, eval = NOT_CRAN, fig.show="hold"}
 ## Plotting abilities: credible and confidence 95% intervals
 
 foot_abilities(fit2_stan, italy_2000)
@@ -562,7 +562,7 @@ The function ```pp_foot``` allows to obtain:
 - a visualization of the match-ordered goal differences along with their 50\% and 95\% credible intervals.
 
 
-```{r pp_foot, echo = TRUE, eval = TRUE}
+```{r pp_foot, echo = TRUE, eval = NOT_CRAN}
 ## PP checks: aggregated goal's differences and ordered goal differences
 
 pp_foot(data = italy_2000, object = fit1_stan, 
@@ -579,7 +579,7 @@ In the second plot, the ordered observed goal differences are plotted against th
 
 Other useful PP checks, such as the overlap between data density and replicated data densities to check eventual inconsistencies, can be obtained through the standard use of the ```bayesplot``` package, in this case providing an approximation to a continuous distribution using an input kernel choice (```bw = 0.5``` in the ```ppc_dens_overlay``` used below):
 
-```{r pp_checks, echo = TRUE, eval = TRUE}
+```{r pp_checks, echo = TRUE, eval = NOT_CRAN}
 ## PPC densities overlay with the bayesplot package
 
 # extracting the replications
@@ -615,7 +615,7 @@ $$p(\tilde{\mathcal{D}}| \mathcal{D}) = \int p(\tilde{\mathcal{D}}| \boldsymbol{
 
 We may then predict test set matches by using the argument ```predict``` of the ```stan_foot``` function, for instance considering the last four weeks of the 2000/2001 season as the test set, and then computing posterior-results probabilities using the function ```foot_prob``` for two teams belonging to the test set, such as Reggina Calcio and AC Milan:
 
-```{r weekly_predict,message = FALSE, results='hide', echo=TRUE, eval= TRUE}
+```{r weekly_predict,message = FALSE, results='hide', echo=TRUE, eval = NOT_CRAN}
 ### Fit Stan models
 ## weekly dynamics, predictions of last four weeks
 ## 4 chains 'n_iter' iterations each
@@ -647,7 +647,7 @@ p_{\text{loss}} = &\ \textrm{Pr} (X<Y)=\frac{1}{S}\sum_{s=1}^S| \tilde{x}^{(s)}<
 where $(\tilde{x}^{(s)}, \tilde{y}^{(s)})$ represents the $s$-th MCMC pair of the future home goals and away goals for a given match, respectively. According to this scenario, we can depict the home-win posterior probabilities of a given test set through the function ```foot_round_robin```:
 
 
-```{r foot_roundrobin, echo=TRUE, eval= TRUE}
+```{r foot_roundrobin, echo=TRUE, eval = NOT_CRAN}
 ## Home win out-of-sample probabilities
 
 foot_round_robin(data = italy_2000, object = fit4_stan)
@@ -665,7 +665,7 @@ We can provide here:
 
 - **rank-league reconstruction** for the first model ```fit1_stan```  by using the **in-sample** replications $\mathcal{D}^{\text{rep}}$ (yellow ribbons for the credible intervals, solid blue lines for the observed cumulated points):
 
-```{r rank_pred1, echo=TRUE, eval= TRUE}
+```{r rank_pred1, echo=TRUE, eval = NOT_CRAN}
 ## Rank league reconstruction
 
 # aggregated plot
@@ -681,7 +681,7 @@ foot_rank(data = italy_2000, object = fit1_stan, visualize = "individual")
 
 - **rank-league prediction** (aggregated or at team-level) for the fourth model ```fit4_stan``` by using the **out-of-sample** replications $\tilde{\mathcal{D}}$ (yellow ribbons for the credible intervals, solid blue lines for the observed cumulated points):
 
-```{r rank_pred2, echo=TRUE, eval= TRUE}
+```{r rank_pred2, echo=TRUE, eval = NOT_CRAN}
 ## Rank predictions for individual teams
 
 # aggregated plot
@@ -725,7 +725,7 @@ This is the **Occam's Razor** occurring in statistics:
 
 We can perform Bayesian model comparisons by using the ```loo``` and ```waic``` functions of the ```loo``` package. We are going to compare the static and the weekly dynamic models on the Italian Serie A 2000/2001:
 
-```{r loo, echo = TRUE, eval = TRUE}
+```{r loo, echo = TRUE, eval = NOT_CRAN}
 ### Model comparisons
 ## LOOIC, loo function
 
