--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Fitting football models and visualizing predictions with the ```footBayes``` package"
-author: "Leonardo Egidi"
+author: "Leonardo Egidi, Vasilis Palaskas"
 date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_vignette:
