--- a/README.Rmd
+++ b/README.Rmd
@@ -41,7 +41,7 @@ library(footBayes)
 require(dplyr)
 
 # dataset for Italian serie A
-
+data("italy")
 italy <- as_tibble(italy)
 italy_2000_2002<- italy %>%
  dplyr::select(Season, home, visitor, hgoal, vgoal) %>%
