--- a/vignettes/footBayes_a_rapid_guide.Rmd
+++ b/vignettes/footBayes_a_rapid_guide.Rmd
@@ -300,7 +300,7 @@ At this stage, we are currently ignoring any time-dependence in our parameters, 
 
 ## alternatively, you can use the basic 'subsetting' code, 
 ## not using the 'tidyverse' environment: 
-data(italy)
+data("italy")
 italy <- as.data.frame(italy)
 italy_2000 <- subset(italy[, c(2,3,4,6,7)], 
                      Season =="2000")
